--- a/style.css
+++ b/style.css
@@ -1,3 +1,33 @@
-.active {
+/* .active {
     color: red;
-}
+/* } */
+
+
+  
+
+  
+  .gallery {
+    display: grid;
+    /* width: 400px; */
+    /* grid-template-columns: repeat(auto-fill, minmax(380px, 1fr)); */
+    /* grid-auto-rows: 240px;
+    grid-gap: 12px; */
+    /* padding: 0;
+    list-style: none;
+    margin-left: auto;
+    margin-right: auto; */
+  }
+
+
+
+  
+  .gallery__image {
+    height: 100%;
+    width: 400px;
+    object-fit: cover;
+    transition: transform 200ms ease-in-out;
+  }
+ 
+
+
+
